<resources>


        <string name="app_name">Baby Sitter</string>
        <string name="login_form_title">Login</string>
        <string name="signup_form_title">SIGN UP</string>
        <string name="login_form_username">Username</string>
        <string name="login_form_password">Password</string>
        <string name="login_form_login">LOGIN</string>
        <string name="login_form_signup">SIGN UP</string>

        <string name="radio_male">Parents</string>
        <string name="radio_female">Sitters</string>

        <string name="login_form_first_name">First name</string>
        <string name="login_form_last_name">Last name</string>
        <string name="login_form_email">Email</string>
        <string name="login_form_re_password">Repeat password</string>
    <string name="title_activity_custom_user_list">CustomUserListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>