<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".SignupActivity"
    android:orientation="vertical"
    android:background="#000">

    <androidx.cardview.widget.CardView
        android:layout_width="333dp"
        android:layout_height="650dp"
        android:layout_margin="40dp"
        android:background="#fff"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="8dp">

        <ScrollView
            android:layout_width="291dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="271dp"
                android:layout_height="591dp"
                android:orientation="vertical"
                android:padding="25dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/login_form_title"
                    android:textAlignment="center"
                    android:textSize="36sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_form_first_name"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/sign_up_activity_firstNameEditText"
                    android:layout_width="232dp"
                    android:layout_height="31dp"
                    android:inputType="text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_form_last_name"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/sign_up_activity_lastNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_form_email"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/sign_up_activity_emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_form_password"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/sign_up_activity_passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_form_re_password"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/sign_up_activity_rePasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

                <RadioGroup
                    android:id="@+id/radioSex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/radio_male" />

                    <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_female" />

                </RadioGroup>

                <Button
                    android:id="@+id/sign_up_activity_signupButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_form_signup"
                    android:textSize="22sp" />

            </LinearLayout>
        </ScrollView>


    </androidx.cardview.widget.CardView>

</LinearLayout>